[project]
name = "llm-finetuning-agent-run-server-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "deepeval>=2.8.2",
    "fastapi>=0.115.12",
    "pandas>=2.2.3",
    "tensorboard>=2.19.0",
    "torch>=2.7.0",
    "transformers>=4.51.3",
]
